# time-value

./: Dockerfile  README.md  docker-compose.yaml  interest_rate_app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
