[project]
name = "time-value"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "ruff>=0.11.2",
    "streamlit-toggle>=0.1.3",
    "streamlit-vertical-slider>=2.5.5",
    "streamlit>=1.43.2",
]
